<resources>
    <string name="app_name">BedheadAlarm</string>
    <string name="title_activity_alarm_view">Alarms</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit Alarm</string>
    <string name="add">Add Alarm</string>
    <string name="delete">Delete</string>
    <string name="title_activity_display_contact">View Alarms</string>
    <string name="name">Name</string>
    <string name="vibrate">Vibrate Alarm?</string>
    <string name="time">Time</string>
    <string name="ringtone">Ringtone</string>
    <string name="save">Save</string>
    <string name="deleteContact">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_alarms">Alarms</string>
    <string name="daysofweek">Repeat On</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="title_activity_maps">Map</string>
    <string name="zoomin">Zoom In</string>
    <string name="zoomout">Zoom Out</string>
    <string name="confirm">Confirm Location</string>
    <string name="search">Search</string>
    <string name="createAlarm">Create Alarm</string>
    <string name="viewAlarm">View All Alarms</string>
    <string name="viewTimetable">View Transit Timetables</string>
    <string name="options">Options</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="cTimeAlarm">Create Time Alarm</string>
    <string name="cGPSAlarm">Create GPS Alarm</string>
    <string name="onleave">Trigger when leaving</string>
    <string name="onenter">Trigger when entering</string>
    <string name="vibon">Vibrate Phone</string>
    <string name="viboff">Vibrate Off</string>
    <string name="radius">Radius of Boundary</string>
    <string name="radiusInt">50 metres</string>

</resources>
